--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,5 +2,9 @@
     "workbench.colorCustomizations": {
         "minimap.background": "#00000000",
         "scrollbar.shadow": "#00000000"
-    }
+    },
+    "java.project.referencedLibraries": [
+        "lib/**/*.jar",
+        "sistemaMembresias/lib/mysql-connector-java-5.1.49.jar"
+    ]
 }
